--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-animate-on-scroll": "^2.1.5",
@@ -23,6 +24,7 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-animations": "^1.0.0",
+    "react-awesome-reveal": "^4.2.5",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-reveal": "^1.2.2",
